--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>GitHub Actions Demo</title>
 </head>
 <body>
-    <h1>这是一个 GitHub Actions 示例页面</h1>
+    <script src="script.js"></script>
 </body>
 </html>
